[package]
name = "meshcore-keygen"
version = "1.0.0"
edition = "2021"
description = "High-performance MeshCore Ed25519 vanity key generator with CPU and GPU support"
license = "MIT"

[features]
default = []
# GPU acceleration features - enable based on target platform
gpu-metal = []      # macOS Metal (built-in)
gpu-vulkan = ["wgpu"]  # Cross-platform Vulkan/DX12/OpenGL via wgpu
gpu-cuda = []       # NVIDIA CUDA (requires CUDA toolkit)
gpu-opencl = ["ocl"]   # Cross-platform OpenCL (NVIDIA, AMD, Intel)

[dependencies]
# Ed25519 cryptography
curve25519-dalek = { version = "4", features = ["digest"] }
sha2 = "0.10"
rand = "0.9"

# CLI and output
clap = { version = "4", features = ["derive"] }
hex = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallelism
rayon = "1.8"
num_cpus = "1.16"
crossbeam-channel = "0.5"

# Progress and formatting
indicatif = { version = "0.18", features = ["rayon"] }
console = "0.16"

# System info
sysinfo = "0.38"

# Cross-platform GPU (optional)
wgpu = { version = "0.19", optional = true }
ocl = { version = "0.19", optional = true }

# Metal GPU (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"
objc = "0.2"
block = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release-fast]
inherits = "release"
debug = false
strip = true
